// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

message ComputeBetaSnapshot {
  string name = 1;
  string description = 2;
  string source_disk = 3;
  int64 disk_size_gb = 4;
  int64 storage_bytes = 5;
  repeated string license = 6;
  ComputeBetaSnapshotSnapshotEncryptionKey snapshot_encryption_key = 7;
  ComputeBetaSnapshotSourceDiskEncryptionKey source_disk_encryption_key = 8;
  string self_link = 9;
  map<string, string> labels = 10;
  string project = 11;
  string zone = 12;
  int64 id = 13;
}

message ComputeBetaSnapshotSnapshotEncryptionKey {
  string raw_key = 1;
  string sha256 = 2;
}

message ComputeBetaSnapshotSourceDiskEncryptionKey {
  string raw_key = 1;
}

message ApplyComputeBetaSnapshotRequest {
  ComputeBetaSnapshot resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeBetaSnapshotRequest {
  string service_account_file = 1;
  ComputeBetaSnapshot resource = 2;
}

message ListComputeBetaSnapshotRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListComputeBetaSnapshotResponse {
  repeated ComputeBetaSnapshot items = 1;
}

service ComputeBetaSnapshotService {
  rpc ApplyComputeBetaSnapshot(ApplyComputeBetaSnapshotRequest) returns (ComputeBetaSnapshot);
  rpc DeleteComputeBetaSnapshot(DeleteComputeBetaSnapshotRequest) returns (google.protobuf.Empty);
  rpc ListComputeBetaSnapshot(ListComputeBetaSnapshotRequest) returns (ListComputeBetaSnapshotResponse);
}
