// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message MonitoringGroup {
  string display_name = 1;
  string filter = 2;
  bool is_cluster = 3;
  string name = 4;
  string parent_name = 5;
  string project = 6;
}

message ApplyMonitoringGroupRequest {
  MonitoringGroup resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteMonitoringGroupRequest {
  string service_account_file = 1;
  MonitoringGroup resource = 2;
}

message ListMonitoringGroupRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListMonitoringGroupResponse {
  repeated MonitoringGroup items = 1;
}

service MonitoringGroupService {
  rpc ApplyMonitoringGroup(ApplyMonitoringGroupRequest) returns (MonitoringGroup);
  rpc DeleteMonitoringGroup(DeleteMonitoringGroupRequest) returns (google.protobuf.Empty);
  rpc ListMonitoringGroup(ListMonitoringGroupRequest) returns (ListMonitoringGroupResponse);
}
